--- a/Challenges/Challenges.vcxproj
+++ b/Challenges/Challenges.vcxproj
@@ -140,6 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Challenges.cpp" />
+    <ClCompile Include="Movie.cpp" />
+    <ClCompile Include="Movies.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Movie.h" />
+    <ClInclude Include="Movies.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
