--- a/Challenges/Challenges.vcxproj.filters
+++ b/Challenges/Challenges.vcxproj.filters
@@ -13,24 +13,30 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\Movies">
+      <UniqueIdentifier>{8990fa41-16bf-44f7-82f4-8bc5ebefac3f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Movies">
+      <UniqueIdentifier>{d79396ed-b30a-4dd0-9db8-20487e95d03a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Challenges.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Movie.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Movies</Filter>
     </ClCompile>
     <ClCompile Include="Movies.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Movies</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Movie.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Movies</Filter>
     </ClInclude>
     <ClInclude Include="Movies.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Movies</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
