--- a/Challenges/Challenges.vcxproj
+++ b/Challenges/Challenges.vcxproj
@@ -139,15 +139,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Account.cpp" />
+    <ClCompile Include="AccountsUtility.cpp" />
     <ClCompile Include="Challenges.cpp" />
+    <ClCompile Include="CheckingAccount.cpp" />
     <ClCompile Include="Movie.cpp" />
     <ClCompile Include="Movies.cpp" />
     <ClCompile Include="Mystring.cpp" />
+    <ClCompile Include="SavingsAccount.cpp" />
+    <ClCompile Include="TrustAccount.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Account.h" />
+    <ClInclude Include="AccountsUtility.h" />
+    <ClInclude Include="CheckingAccount.h" />
     <ClInclude Include="Movie.h" />
     <ClInclude Include="Movies.h" />
     <ClInclude Include="Mystring.h" />
+    <ClInclude Include="SavingsAccount.h" />
+    <ClInclude Include="TrustAccount.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
