--- a/Challenges/Challenges.vcxproj
+++ b/Challenges/Challenges.vcxproj
@@ -148,6 +148,8 @@
     <ClCompile Include="Movies.cpp" />
     <ClCompile Include="Mystring.cpp" />
     <ClCompile Include="SavingsAccount.cpp" />
+    <ClCompile Include="Test.cpp" />
+    <ClCompile Include="TestUtil.cpp" />
     <ClCompile Include="TrustAccount.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -159,6 +161,8 @@
     <ClInclude Include="Movies.h" />
     <ClInclude Include="Mystring.h" />
     <ClInclude Include="SavingsAccount.h" />
+    <ClInclude Include="Test.h" />
+    <ClInclude Include="TestUtil.h" />
     <ClInclude Include="TrustAccount.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
