--- a/Challenges/Challenges.vcxproj
+++ b/Challenges/Challenges.vcxproj
@@ -143,6 +143,8 @@
     <ClCompile Include="AccountsUtility.cpp" />
     <ClCompile Include="Challenges.cpp" />
     <ClCompile Include="CheckingAccount.cpp" />
+    <ClCompile Include="IllegalBalanceException.cpp" />
+    <ClCompile Include="InsufificentFundsException.cpp" />
     <ClCompile Include="I_Printable.cpp" />
     <ClCompile Include="Movie.cpp" />
     <ClCompile Include="Movies.cpp" />
@@ -156,6 +158,8 @@
     <ClInclude Include="Account.h" />
     <ClInclude Include="AccountsUtility.h" />
     <ClInclude Include="CheckingAccount.h" />
+    <ClInclude Include="IllegalBalanceException.h" />
+    <ClInclude Include="InsufificentFundsException.h" />
     <ClInclude Include="I_Printable.h" />
     <ClInclude Include="Movie.h" />
     <ClInclude Include="Movies.h" />
