challenge done! S20-3 was actually easier than i thought. maps and sets knowledge acquired

--- a/Challenges/Challenges.vcxproj
+++ b/Challenges/Challenges.vcxproj
@@ -176,6 +176,7 @@
     <Text Include="play.txt" />
     <Text Include="responses.txt" />
     <Text Include="Romeo x Juliet.txt" />
+    <Text Include="words.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
